add this download method

--- a/codes/package.json
+++ b/codes/package.json
@@ -24,7 +24,8 @@
         "GPS_REQUIRED": "true"
       },
       "cordova-plugin-device-motion": {},
-      "cordova-plugin-background-mode": {}
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-file-transfer": {}
     }
   },
   "devDependencies": {
@@ -32,6 +33,8 @@
     "cordova-plugin-background-mode": "github:datazen/cordova-plugin-background-mode",
     "cordova-plugin-device": "^2.1.0",
     "cordova-plugin-device-motion": "^2.0.1",
+    "cordova-plugin-file": "^8.0.1",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-geolocation": "^4.1.0"
   }
 }
