--- a/codes/package.json
+++ b/codes/package.json
@@ -20,26 +20,17 @@
       "android"
     ],
     "plugins": {
-      "cordova-plugin-background-mode": {},
-      "cordova-background-geolocation-lt": {
-        "GOOGLE_API_VERSION": "19.+",
-        "APPCOMPAT_VERSION": "28.+",
-        "OKHTTP_VERSION": "3.12.+",
-        "EVENTBUS_VERSION": "3.3.1",
-        "HMS_LOCATION_VERSION": "6.9.0.300"
-      },
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "true"
       },
-      "cordova-plugin-device-motion": {}
+      "cordova-plugin-device-motion": {},
+      "cordova-plugin-background-mode": {}
     }
   },
   "devDependencies": {
-    "cordova-android": "^10.1.2",
-    "cordova-background-geolocation-lt": "^4.9.3",
-    "cordova-plugin-background-fetch": "~7.2.1",
-    "cordova-plugin-background-mode": "^0.7.3",
-    "cordova-plugin-device": "^2.1.0",
+    "cordova-android": "^13.0.0",
+    "cordova-plugin-background-mode": "github:datazen/cordova-plugin-background-mode",
+    "cordova-plugin-device": "^3.0.0",
     "cordova-plugin-device-motion": "^2.0.1",
     "cordova-plugin-geolocation": "^4.1.0"
   }
